# kyof-dev

./: README.md
Aspirations/: 2022.md  2023.md
AtCoder/: README.md  ekusiadadus.py
AtCoder/BeginnerContest/: abc211.py  abc212.py
AtCoder/BeginnersSelection/: ABC049C.py  ABC081A.py  ABC081B.py  ABC083B.py  ABC085B.py  ABC085C.py  ABC086A.py  ABC086C.py  ABC087B.py  ABC088B.py  PracticeA.py
AtCoder/typical90/: 004.py
Django/: pyproject.toml
Django/djangosnippets/accounts/: urls.py
Django/djangosnippets/accounts/templates/accounts/: login.html  signup.html
Django/djangosnippets/djangosnippets/: settings.py  urls.py
Django/djangosnippets/snippets/: admin.py  models.py  tests.py  urls.py  views.py
Django/djangosnippets/snippets/migrations/: 0001_initial.py
Django/djangosnippets/snippets/templates/snippets/: snippet_detail.html  snippet_edit.html  snippet_new.html  top.html
Django/djangosnippets/templates/: base.html
DjangoRestFramework/: .gitignore  db.sqlite3
DjangoRestFramework/snippets/: memo.md  models.py  permissions.py  serializers.py  urls.py  views.py
DjangoRestFramework/tutorial/: settings.py
Docker/: README.md
Docker/zgl/: Dockerfile  docker-compose.yml
Flutter/: .gitignore  README.md  pubspec.yaml
Flutter/lib/: footer.dart  main.dart
Flutter/test/: widget_test.dart
Flutter/test_driver/: app.dart  app_test.dart
Flutter/web/: index.html  manifest.json
GAS/: README.md  test.gs
Go/: bar.txt  getargs  go.mod  go.sum  main.go  main_test.go  tmpl.html
JupyterLab/: README.md
TypeScript/: sample.js  sample.ts
(+37 files in other folders)
