[tool.poetry]
name = "django-prac"
version = "0.1.0"
description = ""
authors = ["kyoF <fujiki.kyosuke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-bootstrap5 = "^22.1"
django-pygments-renderer = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
